<resources>
    <string name="app_name">Фотокросс</string>
    <string name="contests">Конкурсы</string>
    <string name="stats">Статистика</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="register">Зарегистрироваться</string>
    <string name="enter">Войти</string>
    <string name="email">Email</string>
    <string name="displayname">Отображаемое имя</string>
    <string name="password">Пароль</string>
    <string name="lost_password">ЗАБЫЛИ ПАРОЛЬ?</string>
    <string name="registering">Регистрация…</string>
    <string name="please_wait">Пожалуйста подождите…</string>
    <string name="image_removed">Фотография удалена</string>
    <string name="error_user_already_exists">Пользователь с таким email уже есть</string>
    <string name="error_network_problem">Проблема с сетью</string>
    <string name="error_unexpected_error">Непредвиденная ошибка</string>
    <string name="registered_success">Регистрация завершена. Вы можете войти</string>
    <string name="error_bad_email">Некорректный email адрес</string>
    <string name="error_empty_display_name">Укажите отображаемое имя</string>
    <string name="error_empty_password">Укажите пароль</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="reset_password">Сброс пароля</string>
    <string name="error_email_not_found">Email не найден</string>
    <string name="check_your_mail">Вам было выслано письмо, проверьте вашу электронную почту</string>
    <string name="email_for_send_password">Укажите email для отправки инструкций</string>
    <string name="password_request">Запрос пароля</string>
    <string name="login">Вход</string>
    <string name="entering">Вход…</string>
    <string name="error_wrong_password">Неверное имя пользователя или пароль</string>
    <string name="profile">Профиль</string>
    <string name="edit_button">ИЗМЕНИТЬ</string>
    <string name="error_not_authorized">Ошибка авторизации</string>
    <string name="loading_info">Загрузка информации</string>
    <string name="profile_updated">Профиль успешно обновлен</string>
    <string name="update_profile">Обновление профиля</string>
    <string name="remove_button">УДАЛИТЬ</string>
    <string name="accaunt_removed">Аккаунт успешно удален</string>
    <string name="delete_confirmation_title">Подтверждение удаления</string>
    <string name="image_delete_confirmation_message">Вы действительно хотите удалить вашу фотографию?</string>
    <string name="profile_delete_confirmation_message">Вы действительно хотите удалить ваш аккаунт?</string>
    <string name="deleting_profile">Удаление профиля</string>
    <string name="error_contest_not_found">Конкурсов не найдено</string>
    <string name="author">Автор </string>
    <string name="reward">Награда</string>
    <string name="open_date">Дата начала</string>
    <string name="close_date">Дата окончания</string>
    <string name="vote_count">Количество голосов</string>
    <string name="new_subject">Тема нового конкурса</string>
    <string name="upload">Загрузить</string>
    <string name="error_empty_subject">Укажите новую тему</string>
    <string name="upload_successfully">Фотография успешно добавлена</string>
    <string name="already_voted">Вы уже голосовали, либо закончились очки голосования</string>
    <string name="vote_success">Ваш голос принят</string>
    <string name="user_information">Информация о пользователе</string>
    <string name="rating">Рейтинг</string>
    <string name="current_contests">Текущие конкурсы</string>
    <string name="user_album">Альбом пользователя</string>
    <string name="take_part">Принять участие</string>
    <string name="vote">Голосовать</string>
    <string name="view">Просмотреть</string>
    <string name="subject">Тема</string>
    <string name="works_count">Количество работ</string>
    <string name="rules">Правила сервиса</string>
    <string name="google_plus">Google+</string>
    <string name="vk_group">ВКонтакте</string>
    <string name="facebook_group">Facebook</string>
    <string name="insta">Instagram</string>
    <string name="rate">Оценить приложение</string>
    <string name="feedback">Обратная связь</string>
    <string name="send_mail">Написать письмо автору</string>
    <string name="author_email">artemyankovskiy@gmail.com</string>
    <string name="choose_email_app">Выберите приложение для отправки Email</string>
    <string name="hidden">*****</string>
    <string name="refresh">Обновить</string>
    <string name="remaining_votes">Осталось голосов</string>
    <string name="empty_rating">Рейтинг пуст</string>
    <string name="subject_help_message">Если вы победите в текущем конкурсе, то станете автором следующего. Укажите его тему:</string>
    <string name="hint">Подсказка</string>
    <string name="user_profile">Профиль пользователя</string>
    <string name="global">Глобальный</string>
    <string name="quart">Квартальный</string>
    <string name="rating_count">Очков</string>
    <string name="in_social">Мы в соцсетях</string>
    <string name="edit_image_subject_title">Новая тема</string>
    <string name="subject_changed">Тема изменена</string>
    <string name="send_this_to_developer">Отправьте это разработчику</string>
    <string name="rating_position">Место в рейтинге</string>
    <string name="wins_count">Количество побед</string>
    <string name="exit">Выход</string>
    <string name="exit_confirmation_message">Выйти из программы?</string>
    <string name="contest">Конкурс</string>
    <string name="to_contest">Перейти к конкурсу</string>
    <string name="prev_contest">Предыдущий конкурс</string>
    <string name="shop">Магазин</string>
    <string name="my_items">Мои покупки</string>
    <string name="confirm_buy_title">Купить?</string>
    <string name="brief_count">шт.</string>
    <string name="purchase_success">Покупка успешно совершена</string>
    <string name="balance">Баланс</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="rate_place">в рейтинге</string>
    <string name="profiletmp">Профиль</string>
    <string name="upload_image_attention">Публикуя фотографию, вы подтверждаете, что являетесь ее автором и что снимок сделан в период проведения конкурса</string>
    <string name="dc">DC</string>
    <string name="upload_avatar">Загрузить аватар</string>
    <string name="remove_avatar">Удалить аватар</string>
    <string name="goto_shop_title">Перейти в магазин?</string>
    <string name="goto_shop_message">Для публикации аватаров необходимо приобрести соответствующий товар в магазине</string>
    <string name="goto_shop_message_contest">Для создания конкурса необходимо приобрести соответствующий товар в магазине</string>
    <string name="choose_source">Выберите источник...</string>
    <string name="is_load_avatar">Загрузить аватар?</string>
    <string name="remove_avatar_confirmation_message">Вы действительно хотите удалить свой аватар?</string>
    <string name="remove_avatar_success">Аватар успешно удален</string>
    <string name="common_info">ОБЩАЯ ИНФОРМАЦИЯ</string>
    <string name="private_info">ЛИЧНАЯ ИНФОРМАЦИЯ</string>
    <string name="danger_zone">ОПАСНАЯ ЗОНА</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="delete_account_title">Удалить аккаунт?</string>
    <string name="delete_account_message">При удалении аккаунта ваши данные удаляются полностью и необратимо! Служба поддержки не сможет помочь вам с восстановлением удаленной информации.</string>
    <string name="new_password">Новый пароль</string>
    <string name="user_stats_title">Распределение очков</string>
    <string name="total_balance">Всего очков</string>
    <string name="wins_balance">За победы в конкурсах</string>
    <string name="works_balance">За опубликованные фотографии</string>
    <string name="other_balance">Прочее</string>
    <string name="wins_list">Список побед</string>
    <string name="no_have_money">У вас недостаточно средств</string>
    <string name="messages">Сообщения</string>
    <string name="new_message">Новое сообщение</string>
    <string name="message_count">Количество сообщений</string>
    <string name="remove_message">Удалить сообщение</string>
    <string name="reply_message">Ответить на сообщение</string>
    <string name="inbox">Входящие</string>
    <string name="outbox">Исходящие</string>
    <string name="forward_message">Переслать сообщение</string>
    <string name="write_message">Написать сообщение</string>
    <string name="message_removed">Сообщение удалено</string>
    <string name="remove_message_confirm">Удалить сообщение?</string>
    <string name="add_user_to_bookmarks">Добавить в избранное</string>
    <string name="remove_user_from_bookmarks">Удалить из избранного</string>
    <string name="favorite_users">Избранные авторы</string>
    <string name="favorite_user_added">Автор добавлен в избранное</string>
    <string name="favorite_user_removed">Автор удален из избранного</string>
    <string name="system_user">Администрация</string>
    <string name="choose_user">Выберите пользователя</string>
    <string name="message_title">Тема</string>
    <string name="message">Сообщение</string>
    <string name="send_message">Отправить сообщение</string>
    <string name="error_empty_title">Укажите тему</string>
    <string name="error_empty_text">Напишите текст</string>
    <string name="message_sent">Сообщение отправлено</string>
    <string name="re">Re</string>
    <string name="remove_messages">Удалить сообщения</string>
    <string name="remove_inbox_messages_confirm">Удалить прочитанные сообщения?</string>
    <string name="remove_outbox_messages_confirm">Очистить папку \"Исходящие\"?</string>
    <string name="information">Информация</string>
    <string name="version">Версия</string>
    <string name="licenses">Лицензии</string>
    <string name="last_changes">Последние изменения</string>
    <string name="rate_on_market">Оставить отзыв в Google Play</string>
    <string name="view_image_info">Информация о снимке</string>
    <string name="edit_image_subject">Изменить тему конкурса</string>
    <string name="remove_image">Удалить фотографию</string>
    <string name="image_upload">Загрузка фотографии</string>
    <string name="photo_description">Описание снимка (не обязательно)</string>
    <string name="about_image">О снимке</string>
    <string name="image_description">О фотографии</string>
    <string name="exif">Exif</string>
    <string name="camera_model">Камера</string>
    <string name="focal_length">Фокусное\nрасстояние</string>
    <string name="shutter_speed">Выдержка</string>
    <string name="iso">ISO</string>
    <string name="shutter_date">Дата съемки</string>
    <string name="aperture">Диафрагма</string>
    <string name="comment">Комментарий</string>
    <string name="photo_author">Автор снимка</string>
    <string name="enter_comment">Напишите комментарий</string>
    <string name="remove_comment">Удалить комментарий</string>
    <string name="comment_removed">Комментарий удален</string>
    <string name="new_comment">Новый комментарий</string>
    <string name="comments">Комментарии</string>
    <string name="information_chanded">Информация изменена</string>
    <string name="edit_image_information">Изменить описание снимка</string>
    <string name="create_contest">Создать конкурс</string>
    <string name="error_empty_reward">Укажите награду за победу</string>
    <string name="sec">сек</string>
    <string name="min">мин</string>
    <string name="mm">мм</string>
    <string name="achievements">Достижения</string>
    <string name="achievement_on_user" formatted="false">у %d %s</string>
    <string name="be_the_first">Станьте первым</string>
    <string name="achievement_gets">Достижение получили</string>
    <string name="my_achievements">Мои достижения</string>
    <string name="user_achievements">Достижения пользователя</string>
</resources>