<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/user_profile_edit"
        android:icon="@drawable/ic_mode_edit_white_24dp"
        app:showAsAction="always"
        android:title="@string/edit_profile">
    </item>

    <item
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/user_profile_add_user"
        android:icon="@drawable/ic_bookmark_outline_white_24dp"
        app:showAsAction="always"
        android:title="@string/add_user_to_bookmarks">
    </item>

    <item
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/user_profile_remove_user"
        android:icon="@drawable/ic_bookmark_white_24dp"
        app:showAsAction="always"
        android:title="@string/remove_user_from_bookmarks">
    </item>

</menu>