<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_padding">

    <EditText
        android:id="@+id/register_userid"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:drawableLeft="@drawable/ic_email_grey600_18dp"
        android:drawablePadding="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/register_displayname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/register_userid"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_account_box_grey600_18dp"
        android:drawablePadding="8dp"
        android:hint="@string/displayname"
        android:inputType="textPersonName"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/register_displayname"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_lock_grey600_18dp"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="16dp"
        android:paddingTop="16dp"
        android:textSize="16sp" />

</RelativeLayout>